--- a/login.html
+++ b/login.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Formulario de Inicio de Sesión</title>
-  <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light d-flex justify-content-center align-items-center vh-100">
 
   <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
     <h2 class="text-center mb-4">Iniciar Sesión</h2>
-    <form action="#" method="post">
+    <form id="loginForm">
       <div class="mb-3">
         <label for="usuario" class="form-label">Nombre de usuario</label>
         <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Ingrese su usuario" required />
@@ -21,14 +20,43 @@
         <input type="password" class="form-control" id="contraseña" name="contraseña" placeholder="Ingrese su contraseña" required />
       </div>
       <div class="d-grid gap-2">
-        <button type="submit" class="btn btn-success"><a href="Menu.html">Inicio</a></button>
-        <button type="button" class="btn btn-secondary"><a href="RegisterLogin.html">Registrarse</a></button>
+        <button type="submit" class="btn btn-success">Iniciar Sesión</button>
+        <a href="RegisterLogin.html" class="btn btn-secondary">Registrarse</a>
       </div>
     </form>
+    <div id="mensaje" class="mt-3 text-center"></div>
   </div>
 
-  <!-- Bootstrap JS (opcional si usarás interactividad como modales) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- JavaScript para validar login -->
+  <script>
+    const loginForm = document.getElementById('loginForm');
+    const mensaje = document.getElementById('mensaje');
+
+    loginForm.addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      const usuario = document.getElementById('usuario').value.trim();
+      const contraseña = document.getElementById('contraseña').value;
+
+      const usuarios = JSON.parse(localStorage.getItem('usuarios') || '[]');
+      const usuarioValido = usuarios.find(u => u.usuario === usuario && u.contraseña === contraseña);
+
+      if (usuarioValido) {
+        mensaje.className = 'text-success';
+        mensaje.textContent = 'Inicio de sesión exitoso. Redirigiendo...';
+
+        // Redirigir al menú después de un breve delay
+        setTimeout(() => {
+          window.location.href = 'Menu.html';
+        }, 1500);
+      } else {
+        mensaje.className = 'text-danger';
+        mensaje.textContent = 'Usuario o contraseña incorrectos.';
+      }
+    });
+  </script>
 </body>
 </html>
 
